--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>RESUME</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
       
-      <h1 style="color:black ;" alig>Muhammad Moeed</h1>
+      <h1>Muhammad Moeed</h1>
 
       <img src="./moeed.jpeg" alt="" width="150">
 
